#+title: What’s new in adftool

* Noteworthy changes in release ?.? (????-??-??) [?]


* Noteworthy changes in release 0.7.0 (2023-03-17) [alpha]
** New function to generate an EEG
adftool_file_open_generated can now generate a synthetic EEG.

* Noteworthy changes in release 0.6.0 (2023-03-09) [alpha]
** API cleaning
Undocumented and internal entry points are now marked as
deprecated. The compiler is informed about which destructor must be
called for allocation functions.

** Adftool has been reported to compile on macos
There might need to tweak a few options: at configure time, specify
the explicit HDF5_CFLAGS and HDF5_LIBS as homebrew does not install a
pkg-config file for HDF5, and explicitly set RCPP_CXXFLAGS, because
sed does not work as expected. The Rcpp test will not pass until
adftool is installed. The configure script cannot check whether Python
can be linked, because cpython does not provide an ABI.

** Bug fix: reading short strings from a dictionary now correctly NUL-terminates the result
Reading a short string would put a NUL character at position 12,
leaving bytes before that uninitialized. Now the NUL character is put
at the correct position.

* Noteworthy changes in release 0.5.3 (2023-03-03) [alpha]
** Fix the named node comparison and the literal comparison
The terms should be compared by their N3 encoding. Previously, '<0>'
would compare before '<%3E>', even if ASCII '0' is after ASII '%',
because only the unescaped form was compared. Similarly, the double
quote as a literal ('"\""') would compare before '"A"', even if ASCII
'\' is after ASCII 'A'.

** Adftool now compiles with clang

* Noteworthy changes in release 0.5.2 (2023-03-02) [alpha]
** R binding with Rcpp
It is now possible to use the adftool API within R, thanks to the new
Rcpp binding.

* Noteworthy changes in release 0.5.1 (2023-02-21) [alpha]
** Fix windows compilation
A couple of bugs have been fixed for windows, now the whole test suite
should pass.
